[workspace]
members = [
  "crates/bundler-cli",
  "crates/bundler-api",
  "crates/bundler-core",
  "crates/bundler-napi",
  "crates/cli",
  "crates/core",
]
exclude = ["crates/runtime"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
bundler-core = { path = "./crates/bundler-core" }
bundler-api = { path = "./crates/bundler-api" }
either = "1.9.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0.96"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"
rustc-hash = "2.1.1"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.13.0"
owo-colors = "4.2.0"
dunce = "1.0.5"
webbrowser = "1.0.4"
regex = "1.11.1"
indexmap = "2.7.1"
criterion = "0.5.1"
dirs = "5.0"
toml = "0.8"
async-trait = "0.1.64"
swc_core = { version = "21.0.1", features = [
  "ecma_loader_lru",
  "ecma_loader_parking_lot",
] }
rand = "0.9.0"
url = "2.2.2"
urlencoding = "2.1.2"
par-core = { version = "1.0.3", features = ["rayon"] }
qstring = "0.7.2"
indoc = "2.0.0"

# Dependencies from nextjs, should keep the same rev!
## Dependencies for common cache and task. See https://github.com/umijs/next.js/blob/canary/turbopack/crates/turbopack/architecture.md
auto-hash-map = { path="../umi-next/turbopack/crates/turbo-tasks-auto-hash-map" }
turbo-tasks = { path="../umi-next/turbopack/crates/turbo-tasks" }
turbo-tasks-fs = { path="../umi-next/turbopack/crates/turbo-tasks-fs" }
turbo-tasks-env = { path="../umi-next/turbopack/crates/turbo-tasks-env" }
turbo-tasks-backend = { path="../umi-next/turbopack/crates/turbo-tasks-backend" }
turbo-tasks-bytes = { path="../umi-next/turbopack/crates/turbo-tasks-bytes" }
turbo-tasks-fetch = { path="../umi-next/turbopack/crates/turbo-tasks-fetch" }
turbo-tasks-hash = { path="../umi-next/turbopack/crates/turbo-tasks-hash" }
turbo-tasks-build = { path="../umi-next/turbopack/crates/turbo-tasks-build" }
turbo-rcstr = { path="../umi-next/turbopack/crates/turbo-rcstr" }
turbo-tasks-memory = { path="../umi-next/turbopack/crates/turbo-tasks-memory" }
turbo-tasks-malloc = { path="../umi-next/turbopack/crates/turbo-tasks-malloc", default-features = false }
turbopack-trace-utils = { path="../umi-next/turbopack/crates/turbopack-trace-utils" }
turbopack-trace-server = { path="../umi-next/turbopack/crates/turbopack-trace-server" }

### Dependencies for bundler specially.
turbopack = { path="../umi-next/turbopack/crates/turbopack" }
turbopack-browser = { path="../umi-next/turbopack/crates/turbopack-browser" }
turbopack-core = { path="../umi-next/turbopack/crates/turbopack-core" }
turbopack-resolve = { path="../umi-next/turbopack/crates/turbopack-resolve" }
turbopack-ecmascript = { path="../umi-next/turbopack/crates/turbopack-ecmascript" }
turbopack-ecmascript-plugins = { path="../umi-next/turbopack/crates/turbopack-ecmascript-plugins" }
turbopack-ecmascript-runtime = { path="../umi-next/turbopack/crates/turbopack-ecmascript-runtime" }
turbopack-ecmascript-hmr-protocol = { path="../umi-next/turbopack/crates/turbopack-ecmascript-hmr-protocol" }
turbopack-image = { path="../umi-next/turbopack/crates/turbopack-image" }
turbopack-node = { path="../umi-next/turbopack/crates/turbopack-node" }
turbopack-nodejs = { path="../umi-next/turbopack/crates/turbopack-nodejs" }
turbopack-static = { path="../umi-next/turbopack/crates/turbopack-static" }
turbopack-dev-server = { path="../umi-next/turbopack/crates/turbopack-dev-server" }

[workspace.lints.clippy]
too_many_arguments = "allow"
