[workspace]
members = [
  "crates/pack-cli",
  "crates/pack-api",
  "crates/pack-core",
  "crates/pack-napi",
  "crates/pack-schema",
  "crates/cli",
  "crates/core",
]
exclude = ["crates/runtime"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
pack-core = { path = "./crates/pack-core" }
pack-api = { path = "./crates/pack-api" }
schemars = "0.8"
insta = "1.0"
either = "1.9.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0.96"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"
rustc-hash = "2.1.1"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.13.0"
owo-colors = "4.2.0"
dunce = "1.0.5"
webbrowser = "1.0.4"
regex = "1.11.1"
regress = "0.10.3"
indexmap = "2.7.1"
criterion = "0.5.1"
dirs = "5.0"
toml = "0.8"
async-trait = "0.1.64"
swc_core = { version = "29.2.0", features = [
  "ecma_loader_lru",
  "ecma_loader_parking_lot",
  "parallel_rayon",
] }
rand = "0.9.0"
url = "2.2.2"
urlencoding = "2.1.2"
qstring = "0.7.2"
indoc = "2.0.0"
parking_lot = "0.12.1"

# Dependencies from nextjs, should keep the same rev!
## Dependencies for common cache and task. See https://github.com/umijs/next.js/blob/canary/turbopack/crates/turbopack/architecture.md
turbo-tasks = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks", branch = "utoo-patch" }
turbo-tasks-fs = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-fs", branch = "utoo-patch" }
turbo-tasks-env = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-env", branch = "utoo-patch" }
turbo-tasks-backend = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-backend", branch = "utoo-patch" }
turbo-tasks-bytes = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-bytes", branch = "utoo-patch" }
turbo-tasks-fetch = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-fetch", branch = "utoo-patch" }
turbo-tasks-hash = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-hash", branch = "utoo-patch" }
turbo-tasks-build = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-build", branch = "utoo-patch" }
turbo-rcstr = { git = "https://github.com/umijs/next.js.git", package = "turbo-rcstr", branch = "utoo-patch" }
turbo-esregex = { git = "https://github.com/umijs/next.js.git", package = "turbo-esregex", branch = "utoo-patch" }
turbo-tasks-malloc = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-malloc", branch = "utoo-patch", default-features = false }
turbopack-trace-utils = { git = "https://github.com/umijs/next.js.git", package = "turbopack-trace-utils", branch = "utoo-patch" }
turbopack-trace-server = { git = "https://github.com/umijs/next.js.git", package = "turbopack-trace-server", branch = "utoo-patch" }

### Dependencies for bundler specially.
turbopack = { git = "https://github.com/umijs/next.js.git", package = "turbopack", branch = "utoo-patch" }
turbopack-browser = { git = "https://github.com/umijs/next.js.git", package = "turbopack-browser", branch = "utoo-patch" }
turbopack-core = { git = "https://github.com/umijs/next.js.git", package = "turbopack-core", branch = "utoo-patch" }
turbopack-resolve = { git = "https://github.com/umijs/next.js.git", package = "turbopack-resolve", branch = "utoo-patch" }
turbopack-ecmascript = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript", branch = "utoo-patch" }
turbopack-ecmascript-plugins = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript-plugins", branch = "utoo-patch" }
turbopack-ecmascript-runtime = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript-runtime", branch = "utoo-patch" }
turbopack-ecmascript-hmr-protocol = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript-hmr-protocol", branch = "utoo-patch" }
turbopack-image = { git = "https://github.com/umijs/next.js.git", package = "turbopack-image", branch = "utoo-patch" }
turbopack-node = { git = "https://github.com/umijs/next.js.git", package = "turbopack-node", branch = "utoo-patch" }
turbopack-nodejs = { git = "https://github.com/umijs/next.js.git", package = "turbopack-nodejs", branch = "utoo-patch" }
turbopack-static = { git = "https://github.com/umijs/next.js.git", package = "turbopack-static", branch = "utoo-patch" }
turbopack-dev-server = { git = "https://github.com/umijs/next.js.git", package = "turbopack-dev-server", branch = "utoo-patch" }
turbopack-cli-utils = { git = "https://github.com/umijs/next.js.git", package = "turbopack-cli-utils", branch = "utoo-patch" }

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"

[profile.release-local]
inherits = "release"
opt-level = 1
lto = false
strip = "none"
incremental = true
codegen-units = 256

# cargo build --profile release-instruments --bin pack-cli
# xcrun xctrace record --template "Time Profiler" --launch -- ./target/release/pack-cli --mode build --project-dir ./examples/multiple-entries-heavy --root-dir .
[profile.release-instruments]
inherits = "release"
opt-level = 1
lto = false
strip = "none"
incremental = true
codegen-units = 256
debug = 2
