[workspace]
members = [
  "crates/pack-cli",
  "crates/pack-api",
  "crates/pack-core",
  "crates/pack-napi",
  "crates/pack-schema",
  "crates/cli",
  "crates/core",
]
exclude = ["crates/runtime"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
pack-core = { path = "./crates/pack-core" }
pack-api = { path = "./crates/pack-api" }
schemars = "0.8"
insta = "1.0"
either = "1.9.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0.96"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"
rustc-hash = "2.1.1"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
owo-colors = "4.2.0"
dunce = "1.0.5"
webbrowser = "1.0.4"
regex = "1.11.1"
regress = "0.10.3"
indexmap = "2.7.1"
criterion = "0.6.0"
dirs = "5.0"
toml = "0.8"
async-trait = "0.1.64"
swc_core = { version = "30.0.1", features = [
  "ecma_loader_lru",
  "ecma_loader_parking_lot",
  "parallel_rayon",
] }
rand = "0.9.0"
url = "2.2.2"
urlencoding = "2.1.2"
qstring = "0.7.2"
indoc = "2.0.0"
parking_lot = "0.12.1"

# Dependencies from nextjs, should keep the same rev!
## Dependencies for common cache and task. See https://github.com/umijs/next.js/blob/canary/turbopack/crates/turbopack/architecture.md
turbo-tasks = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks" }
turbo-tasks-fs = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-fs" }
turbo-tasks-env = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-env" }
turbo-tasks-backend = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-backend" }
turbo-tasks-bytes = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-bytes" }
turbo-tasks-fetch = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-fetch" }
turbo-tasks-hash = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-hash" }
turbo-tasks-build = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-build" }
turbo-rcstr = { git = "https://github.com/umijs/next.js.git", package = "turbo-rcstr" }
turbo-esregex = { git = "https://github.com/umijs/next.js.git", package = "turbo-esregex" }
turbo-tasks-malloc = { git = "https://github.com/umijs/next.js.git", package = "turbo-tasks-malloc", default-features = false }
turbopack-trace-utils = { git = "https://github.com/umijs/next.js.git", package = "turbopack-trace-utils" }
turbopack-trace-server = { git = "https://github.com/umijs/next.js.git", package = "turbopack-trace-server" }

### Dependencies for bundler specially.
turbopack = { git = "https://github.com/umijs/next.js.git", package = "turbopack" }
turbopack-browser = { git = "https://github.com/umijs/next.js.git", package = "turbopack-browser" }
turbopack-core = { git = "https://github.com/umijs/next.js.git", package = "turbopack-core" }
turbopack-resolve = { git = "https://github.com/umijs/next.js.git", package = "turbopack-resolve" }
turbopack-ecmascript = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript" }
turbopack-ecmascript-plugins = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript-plugins" }
turbopack-ecmascript-runtime = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript-runtime" }
turbopack-ecmascript-hmr-protocol = { git = "https://github.com/umijs/next.js.git", package = "turbopack-ecmascript-hmr-protocol" }
turbopack-image = { git = "https://github.com/umijs/next.js.git", package = "turbopack-image" }
turbopack-node = { git = "https://github.com/umijs/next.js.git", package = "turbopack-node" }
turbopack-nodejs = { git = "https://github.com/umijs/next.js.git", package = "turbopack-nodejs" }
turbopack-static = { git = "https://github.com/umijs/next.js.git", package = "turbopack-static" }
turbopack-dev-server = { git = "https://github.com/umijs/next.js.git", package = "turbopack-dev-server" }
turbopack-cli-utils = { git = "https://github.com/umijs/next.js.git", package = "turbopack-cli-utils" }

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"

[profile.release-local]
inherits = "release"
opt-level = 1
lto = false
strip = "none"
incremental = true
codegen-units = 256

# cargo build --profile release-instruments --bin pack-cli
# xcrun xctrace record --template "Time Profiler" --launch -- ./target/release/pack-cli --mode build --project-dir ./examples/multiple-entries-heavy --root-dir .
[profile.release-instruments]
inherits = "release"
opt-level = 1
lto = false
strip = "none"
incremental = true
codegen-units = 256
debug = 2
