[package]
edition = "2021"
name    = "mako_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = { workspace = true }
cached      = { workspace = true }
mako        = { path = '../mako' }
napi        = { version = "2.16.11", default-features = false, features = ["async", "napi4", "serde-json"] }
napi-derive = "2.16.12"
oneshot     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
