[package]
edition = "2021"
name    = "mako_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = { workspace = true }
cached      = { workspace = true }
mako        = { path = '../mako' }
napi        = { version = "2.16.11", default-features = false, features = ["async", "napi4", "serde-json"] }
napi-derive = "2.16.12"
oneshot     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
swc_malloc  = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
