[package]
name = "bundler-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
auto-hash-map = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
bundler-core = { workspace = true }
qstring = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
urlencoding = { workspace = true }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-hash = { workspace = true }
turbo-tasks-memory = { workspace = true }
turbo-tasks-backend = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-node = { workspace = true }
turbopack-nodejs = { workspace = true }
turbopack-trace-utils = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
turbo-tasks-build = { workspace = true }
vergen = { git = "https://github.com/bgw/vergen.git", branch = "bgw/no-optional-locks", features = [
  "cargo",
] }

[lints]
workspace = true
