[package]
name = "bundler-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "bundler-cli"
path = "src/main.rs"


[dependencies]
bundler-api = { workspace = true }
bundler-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true, optional = true }
tokio = { workspace = true }
rustc-hash = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
dunce = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1.15"
futures-util = "0.3.30"
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-backend = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-memory = { workspace = true }
turbo-tasks-malloc = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-core = { workspace = true }
turbopack-trace-utils = { workspace = true }


[build-dependencies]
turbo-tasks-build = { workspace = true }

[lints]
workspace = true
