[package]
name = "bundler-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]

plugin = [
  "swc_core/plugin_transform_host_native",
  "swc_core/plugin_transform_host_native_filesystem_cache",
  "swc_core/plugin_transform_host_native_shared_runtime",
  "bundler-core/plugin",
  "turbopack-ecmascript-plugins",
  "turbopack-ecmascript-plugins/swc_ecma_transform_plugin",
]

# Enable support for the tokio console: https://github.com/tokio-rs/console
tokio-console = ["dep:console-subscriber"]


[dependencies]
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
  "tokio_rt",
  "error_anyhow",
  # Lightningcss uses this features
  "napi4",
  "napi5",
  "compat-mode",
] }
napi-derive = "2"
bundler-api = { workspace = true }
bundler-core = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
napi-build = "2"
serde = { workspace = true }
serde_json = { workspace = true }
turbo-tasks-build = { workspace = true }


[lints]
workspace = true
