[package]
name = "bundler"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
turbo-tasks = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-ecmascript-plugins = { workspace = true, features = [
  "transform_emotion",
] }
turbopack-ecmascript-runtime = { workspace = true }
turbopack-image = { workspace = true }
turbopack-node = { workspace = true }
turbopack-nodejs = { workspace = true }
turbopack-static = { workspace = true }
