[package]
name = "utoo"
version = "0.0.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
dirs = "4.0"
libc = "0.2"
clap = "3"
indicatif = "0.17.8"
once_cell = "1.19.0"
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
tokio-retry = "0.3"
tempfile = "3.15.0"
semver = "1.0.25"
futures = "0.3"
glob = "0.3.1"
criterion = {workspace=true}

[[bench]]
name = "install_benchmark"
harness = false
path = "benches/deps_benchmark.rs"
