[package]
name = "utoo-cli"
version = "0.0.0-alpha.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utoo_cli"
path = "src/lib.rs"

[[bin]]
name = "utoo-clean"
path = "src/bin/utoo-clean.rs"

[[bin]]
name = "utoo-install"
path = "src/bin/utoo-install.rs"

[[bin]]
name = "utoo-rebuild"
path = "src/bin/utoo-rebuild.rs"

[[bin]]
name = "utoo-deps"
path = "src/bin/utoo-deps.rs"

[[bin]]
name = "utoo-update"
path = "src/bin/utoo-update.rs"

[[bin]]
name = "utoo"
path = "src/main.rs"


[dependencies]
tokio = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
flate2 = "1.0"
tar = "0.4"
dirs = "4.0"
libc = "0.2"
clap = { workspace = true }
indicatif = "0.17.8"
once_cell = "1.19"
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
tokio-retry = "0.3"
tempfile = "3.15.0"
deno_semver = "0.7"
futures = { workspace = true }
glob = "0.3.1"
criterion = { workspace = true }
utoo-core = { path = "../core/" }
regex = "1.10"

[[bench]]
name = "install_benchmark"
harness = false
path = "benches/deps_benchmark.rs"
