[package]
name = "utoo-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ut"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive", "help"] }
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
thiserror = { workspace = true }
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"
