[package]
name = "utoo-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ut"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"
