[package]
name       = "mako"
version    = "0.1.0"
edition    = "2021"
repository = "https://github.com/umijs/mako"
license    = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"
test = false

[dependencies]
bitflags         = { version = "2.4.2", features = ["serde"] }
cached           = { workspace = true }
delegate         = "0.12.0"
fixedbitset      = "0.4.2"
glob-match       = "0.2.1"
heck             = "0.4.1"
mako_core        = { path = "../core" }
miette           = { version = "5.10.0", features = ["fancy"] }
nanoid           = "0.4.0"
oxc_resolver     = "1.5.4"
percent-encoding = { version = "2.3.1" }
serde            = { workspace = true }
serde_json       = { workspace = true }
swc_core         = { workspace = true, features = ["swc_ecma_quote_macros"] }
url              = { version = "2.5.0" }
wasm-bindgen = "0.2.92"

[target.'cfg(all(not(target_os = "linux"), not(target_arch = "wasm32")))'.dependencies]
mimalloc-rust = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
insta                       = { version = "1.30.0", features = ["yaml"] }
maplit                      = "1.0.2"
swc_ecma_transforms_testing = "0.136.2"
testing                     = "0.35.10"

[features]
profile = ["mako_core/profile"]
