[package]
name       = "mako"
version    = "0.1.0"
edition    = "2021"
repository = "https://github.com/umijs/mako"
license    = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"
test = false

[dependencies]
bitflags     = { version = "2.4.2", features = ["serde"] }
cached       = { workspace = true }
dashmap      = "4.0.1"
delegate     = "0.12.0"
fixedbitset  = "0.4.2"
get_if_addrs = "0.5.3"
glob-match   = "0.2.1"
heck         = "0.4.1"
mako_core    = { path = "../core" }
miette       = { version = "5.10.0", features = ["fancy"] }
nanoid       = "0.4.0"
open         = "5.1.4"
# On oxc_resolver 1.8.0 version, this pr https://github.com/oxc-project/oxc-resolver/pull/168 will break alias resolving
oxc_resolver     = { version = "=1.7.0", features = ["package_json_raw_json_api"] }
percent-encoding = { version = "2.3.1" }
serde            = { workspace = true }
serde_json       = { workspace = true }
swc_core         = { workspace = true, features = ["swc_ecma_quote_macros"] }
url              = { version = "2.5.0" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
insta                       = { version = "1.30.0", features = ["yaml"] }
maplit                      = "1.0.2"
swc_ecma_transforms_testing = "0.136.2"
testing                     = "0.35.10"

[features]
profile = ["mako_core/profile"]
