[package]
name       = "mako"
version    = "0.1.0"
edition    = "2021"
repository = "https://github.com/umijs/mako"
license    = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"
test = false

[dependencies]
bitflags     = { version = "2.4.2", features = ["serde"] }
cached       = { workspace = true }
dashmap      = "4.0.1"
delegate     = "0.12.0"
fixedbitset  = "0.4.2"
get_if_addrs = "0.5.3"
glob-match   = "0.2.1"
heck         = "0.4.1"
miette       = { version = "5.10.0", features = ["fancy"] }
nanoid       = "0.4.0"
open         = "5.1.4"
# On oxc_resolver 1.8.0 version, this pr https://github.com/oxc-project/oxc-resolver/pull/168 will break alias resolving
oxc_resolver     = { version = "=1.7.0", features = ["package_json_raw_json_api"] }
percent-encoding = { version = "2.3.1" }
serde            = { workspace = true }
serde_json       = { workspace = true }
url              = { version = "2.5.0" }

swc_core = { workspace = true, features = [
  "__ecma",
  "__ecma_plugin_transform",
  "__ecma_transforms",
  "__parser",
  "__testing_transform",
  "__utils",
  "__visit",
  "base",
  "common_concurrent",
  "common_sourcemap",
  "common_tty",
  "css_ast",
  "css_codegen",
  "css_compat",
  "css_minifier",
  "css_modules",
  "css_parser",
  "css_prefixer",
  "css_utils",
  "css_visit",
  "css_visit_path",
  "ecma_ast",
  "ecma_codegen",
  "ecma_minifier",
  "ecma_minifier_concurrent",
  "ecma_preset_env",
  "ecma_quote",
  "ecma_transforms_compat",
  "ecma_transforms_module",
  "ecma_transforms_optimization",
  "ecma_transforms_proposal",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_visit_path",
  "swc_ecma_quote_macros",
] }

swc_emotion         = "0.51.0"
swc_error_reporters = "0.16.1"
swc_node_comments   = "0.19.1"

anyhow                = "1.0.71"
base64                = "0.21.2"
chrono                = "0.4.38"
clap                  = { version = "4.3.11", features = ["derive"] }
colored               = "2"
config                = "0.13.3"
convert_case          = "0.6.0"
eframe                = { version = "0.22.0", optional = true }
fs_extra              = "1.3.0"
futures               = "0.3.28"
glob                  = "0.3.1"
hashlink              = "0.9.1"
hyper                 = { version = "0.14.27", features = ["full"] }
hyper-staticfile      = "0.9.6"
hyper-tungstenite     = "0.10.0"
indexmap              = "2.0.0"
indicatif             = "0.17.8"
md5                   = "0.7.0"
mdxjs                 = "0.1.14"
merge-source-map      = "1.2.0"
mime_guess            = "2.0.4"
nohash-hasher         = "0.2.0"
notify                = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-full = { version = "0.3.1", default-features = false }
parking_lot           = { version = "0.12", features = ["nightly"] }
path-clean            = "1.0.1"
pathdiff              = "0.2.1"
petgraph              = "0.6.3"
puffin                = { version = "0.16.0", optional = true }
puffin_egui           = { version = "0.22.0", optional = true }
rayon                 = "1.7.0"
regex                 = "1.9.3"
sailfish              = "0.8.3"
serde-xml-rs          = "0.6.0"
serde_yaml            = "0.9.22"
svgr-rs               = "0.1.3"
thiserror             = "1.0.43"
tokio                 = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite     = "0.19.0"
toml                  = "0.7.6"
tracing               = "0.1.37"
tracing-subscriber    = { version = "0.3.17", features = ["env-filter"] }
tungstenite           = "0.19.0"
twox-hash             = "1.6.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
insta                       = { version = "1.30.0", features = ["yaml"] }
maplit                      = "1.0.2"
swc_ecma_transforms_testing = "0.136.2"
testing                     = "0.35.10"

[features]
profile = ["dep:eframe", "dep:puffin", "dep:puffin_egui"]
